# solana-validator-grpc

./: Cargo.toml  README.md  build.rs
contrib/proto/: relay.proto
proto/: relay.proto  txproc.proto
src/: client.rs  err.rs  lib.rs  server.rs
src/proto/: relay.rs  txproc.rs
